[친구 추가 부분 수정]+[채팅방 db생성까지는 성공]

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
                 android:name=".ChatActivity"
                 android:parentActivityName=".MainActivity"
-                android:windowSoftInputMode="adjustResize">
+                android:windowSoftInputMode="adjustResize|stateHidden">
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
                     android:value="com.example.taewanmessenger.MainActivity"/>
