[친구 삭제 기능 완료]+[마이페이지 프로필사진 DB연동]+[채팅창 로딩바]+[채팅 이미지 줌인 애니메이션 적용]

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
 
     //이미지 크롭
     implementation 'com.github.yalantis:ucrop:2.2.3'
+
+    //페이스북
+    implementation 'com.facebook.android:facebook-login:[5,6)'
 }
