--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,11 @@
         <activity
                 android:name=".MyPageActivity"
                 android:label="@string/title_activity_my_page"
-                android:theme="@style/AppTheme.NoActionBar">
+                android:theme="@style/AppTheme.NoActionBar"
+                android:parentActivityName=".MainActivity">
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value="com.example.taewanmessenger.MainActivity"/>
         </activity>
         <activity
                 android:name="com.yalantis.ucrop.UCropActivity"
